<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Botones_historia.Datos_perso"
    android:background="@drawable/fondo_app">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App_sonripluss_app.AppBarOverlay"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/AzuL_logo"
            app:popupTheme="@style/Theme.App_sonripluss_app.PopupOverlay"
            >
            <Button
                android:id="@+id/Cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancelar"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="140dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="@color/Azul"
                />
            <Button
                android:id="@+id/Añadir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Añadir"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="@color/Azul"
                />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="6dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/logo_sonripluss"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                />
            <RadioGroup
                android:id="@+id/Radiogrup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="40dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Tipo_id"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <RadioButton android:id="@+id/Tipo_id_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tipo_id_1"
                    android:onClick="onRadioButtonClicked"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
                <RadioButton android:id="@+id/Tipo_id_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tipo_id_2"
                    android:onClick="onRadioButtonClicked"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
                <RadioButton android:id="@+id/Tipo_id_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tipo_id_3"
                    android:onClick="onRadioButtonClicked"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
            </RadioGroup>
            <EditText
                android:id="@+id/ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:hint="@string/CC_edittext"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:hint="@string/Nombres"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/Pri_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:hint="@string/Pri_Apellido"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/Seg_Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:hint="@string/Seg_Apellido"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/Radiogrup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="40dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sexo"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <RadioButton android:id="@+id/sexo_H"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo_H"
                    android:onClick="onRadioButtonClicked2"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
                <RadioButton android:id="@+id/sexo_M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo_M"
                    android:onClick="onRadioButtonClicked2"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
                <RadioButton android:id="@+id/sexo_O"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo_O"
                    android:onClick="onRadioButtonClicked2"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
            </RadioGroup>
            <EditText
                android:id="@+id/Edad_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="date"
                android:textColorHint="@color/gray"
                android:hint="@string/Edad_act"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24sp" />
            <RadioGroup
                android:id="@+id/Radiogrup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="40dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Estado_Civil"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <RadioButton android:id="@+id/Estado_Civil1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Estado_Civil1"
                    android:onClick="onRadioButtonClicked3"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
                <RadioButton android:id="@+id/Estado_Civil2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Estado_Civil2"
                    android:onClick="onRadioButtonClicked3"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
                <RadioButton android:id="@+id/Estado_Civil3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Estado_Civil3"
                    android:onClick="onRadioButtonClicked3"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
            </RadioGroup>
            <EditText
                android:id="@+id/Ocupacion"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textColorHint="@color/gray"
                android:hint="@string/Ocupacion"
                android:background="@drawable/rounded_edittext"
                />
            <EditText
                android:id="@+id/Direccion"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textColorHint="@color/gray"
                android:hint="@string/Direccion"
                android:background="@drawable/rounded_edittext"
                />
            <EditText
                android:id="@+id/Phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="phone"
                android:textColorHint="@color/gray"
                android:hint="@string/phone_number"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Lugar"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textColorHint="@color/gray"
                android:hint="@string/Lugar"
                android:background="@drawable/rounded_edittext"
                />
            <EditText
                android:id="@+id/Motivos"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textColorHint="@color/gray"
                android:hint="@string/Motivos"
                android:background="@drawable/rounded_edittext"
                />
            <EditText
                android:id="@+id/EmailAddress"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textColorHint="@color/gray"
                android:hint="@string/user_edittext"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>