<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.slideshow.SlideshowView_main_tabs"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App_sonripluss_app">
   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabs_id"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Boton_Datos_personales"/>
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Boton_Antecedentes"/>
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Boton_Examen_Estomo"/>
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Boton_Odontograma"/>

   </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>