<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.Slideshow_Prueba">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="6dp"
        >
        <LinearLayout
            android:id="@+id/add_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo_sonripluss"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/Boton_Datos_personales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boton_Datos_personales"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:paddingRight="45dp"
                android:paddingLeft="45dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="@color/Azul"
                />
            <Button
                android:id="@+id/Boton_Antecedentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boton_Antecedentes"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingRight="70dp"
                android:paddingLeft="70dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="@color/Azul"
                />

            <Button
                android:id="@+id/Boton_Examen_Estomo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="@color/Azul"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Boton_Examen_Estomo"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Boton_Tabla_Articulacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boton_Odontograma"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingRight="70dp"
                android:paddingLeft="70dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/rounded_buttom"
                android:backgroundTint="@color/Azul"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>